--- a/package.json
+++ b/package.json
@@ -44,27 +44,30 @@
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.3",
-    "@types/react": "^16.7.20",
-    "@types/react-dom": "^16.0.11",
+    "@types/react": "^16.8.3",
+    "@types/react-dom": "^16.8.2",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
     "husky": "^1.2.0",
     "mocha": "^5.2.0",
     "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "source-map-support": "^0.5.9",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.1.6",
+    "typescript": "^3.3.3",
     "typings": "^2.1.1",
     "yarn-run-all": "^3.1.1"
   },
   "peerDependencies": {
-    "react": "16.7.0-alpha.2",
-    "react-dom": "16.7.0-alpha.2"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "resolutions": {
+    "@types/react": "^16.8.3"
+  }
 }
