--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-logic-animate",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Animate your react components position with logic. Hook and Basic react component available.",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "start": "npm-run-all --parallel build:watch css:watch",
     "build": "tsc",
