--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
     "react": "^16.8.2",
-    "react-dom": "^16.8.2",
     "source-map-support": "^0.5.9",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -64,8 +63,7 @@
     "yarn-run-all": "^3.1.1"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8.0"
   },
   "dependencies": {},
   "resolutions": {
